--- a/etc/시간복잡도.md
+++ b/etc/시간복잡도.md
@@ -65,3 +65,13 @@
 | View           | d.keys()    | O(1)      | d.values() 동일         |
 | Construction   | dict(…)     | O(len(…)) |                         |
 | Iteration      | for k in d: | O(N)      |                         |
+
+
+## 확장 유클리드 알고리즘
+
+
+
+x, y에 대한 부정방정식 ax + by = c는 c의 값이 gcd(a,b)의 배수일 때만 정수해를 갖는다고 알려져 있다. 즉, ax + by = c가 정수해를 갖는 c의 최소값이 gcd(a,b)가 되는것이다. 따라서 확장 유클리드 알고리즘은 말 그대로 유클리드 알고리즘을 확장하여 a,b의 최대공약수 뿐 아니라 , ax + by = gcd(a,b)를 만족하는 정수해 x, y도 구하는 알고리즘이라고 생각하면 된다.
+
+
+
