유클리드 호제법

--- a/etc/유클리드 호제법.md
+++ b/etc/유클리드 호제법.md
@@ -59,7 +59,7 @@ def gcd(a, b):
 
   5. 4 = 2 * 2 + 0 이므로 끝낸다
 
-결국 240240 과 4646 의 최대공약수는 22 이고, 240x+46y=2240x+46y=2 를 만족하는 정수해는 x=−9,y=47x=−9,y=47 이 된다.
+결국 240 과 46 의 최대공약수는 2 이고, 240x+46y=2를 만족하는 정수해는 x=−9,y=47 이 된다.
 
 
 
