에라토스테네스의 체

--- a/etc/에라토스테네스의 체.md
+++ b/etc/에라토스테네스의 체.md
@@ -23,7 +23,7 @@ def prime(n):
 
 
 
-에라토스테네스의 체를 이용해 1~n까지의 소수를 알고 싶다면, n까지 모든 수의 배수를 다 나눠 볼 필요는 없다. 만약 어떤 수 m=abm=ab라면 aa와 bb 중 적어도 하나는 \sqrt{n}n이하이다. 즉 n보다 작은 합성수 m은 \sqrt{n}n보다 작은 수의 배수만 체크해도 전부 지워진다는 의미이므로, \sqrt{n}n이하의 수의 배수만 지우면 된다. 단적으로 1~50인 위의 경우, 사실은 7의 배수 중 남아있는 49 하나만 더 지우면 끝난다.
+에라토스테네스의 체를 이용해 `1~n`까지의 소수를 알고 싶다면, n까지 모든 수의 배수를 다 나눠 볼 필요는 없다. 만약 어떤 수 m=abm=ab라면 aa와 bb 중 적어도 하나는 \sqrt{n}n이하이다. 즉 n보다 작은 합성수 m은 \sqrt{n}n보다 작은 수의 배수만 체크해도 전부 지워진다는 의미이므로, \sqrt{n}n이하의 수의 배수만 지우면 된다. 단적으로 `1~50`인 위의 경우, 사실은 7의 배수 중 남아있는 49 하나만 더 지우면 끝난다.
 
 
 
